@@ -4,6 +4,7 @@ import de.muenchen.oss.wahllokalsystem.vorfaelleundvorkommnisseservice.exception
 import de.muenchen.oss.wahllokalsystem.wls.common.exception.util.ExceptionFactory;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -14,13 +15,13 @@ public class EreignisValidator {
     private final ExceptionFactory exceptionFactory;
 
     public void validWahlbezirkIDOrThrow(final String wahlbezirkID) {
-        if (wahlbezirkID == null || wahlbezirkID.isBlank()) {
+        if (StringUtils.isBlank(wahlbezirkID)) {
             throw exceptionFactory.createFachlicheWlsException(ExceptionConstants.GETEREIGNIS_SUCHKRITERIEN_UNVOLLSTAENDIG);
         }
     }
 
     public void validEreignisAndWahlbezirkIDOrThrow(final EreignisseWriteModel ereignis) {
-        if (ereignis == null || ereignis.wahlbezirkID().isBlank()) {
+        if (ereignis == null || StringUtils.isBlank(ereignis.wahlbezirkID())) {
             log.warn("#postEreignis: Parameter unvollständig");
             throw exceptionFactory.createFachlicheWlsException(ExceptionConstants.POSTEREIGNIS_PARAMS_UNVOLLSTAENDIG);
         }
